--- a/_sass/_video.scss
+++ b/_sass/_video.scss
@@ -88,10 +88,12 @@
   width: 100%;
   padding-top: 56.25%;
   overflow: hidden;
-  border-radius: $border-radius;
-  background-color: $black;
+  border-radius: $border-radius-lg;
+  background-color: $primary-dark;
+  box-shadow: $shadow-lg;
 
-  iframe {
+  iframe,
+  video {
     position: absolute;
     inset: 0;
     width: 100%;
